[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/MainScreens/Connect.gd" type="Script" id=1]
[ext_resource path="res://Game/Buttons/Social/Google-not-actived.png" type="Texture" id=2]
[ext_resource path="res://Game/Buttons/Social/Facebook-not-actived.png" type="Texture" id=3]
[ext_resource path="res://Game/Buttons/Social/sms.png" type="Texture" id=4]
[ext_resource path="res://Game/Buttons/Commons/Back.png" type="Texture" id=5]

[node name="Connect" type="Node" index="0"]
script = ExtResource( 1 )

[node name="Google" type="TextureButton" parent="." index="0"]
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 355.312
margin_top = -50.0
margin_right = 455.312
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
_sections_unfolded = [ "Textures" ]

[node name="Facebook" type="TextureButton" parent="." index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
_sections_unfolded = [ "Textures" ]

[node name="SMS" type="TextureButton" parent="." index="2"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -472.092
margin_top = -50.0
margin_right = -372.092
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="Back" type="TextureButton" parent="." index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 580.0
margin_right = 132.0
margin_bottom = 680.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[connection signal="pressed" from="Google" to="." method="_on_Google_pressed"]
[connection signal="pressed" from="Facebook" to="." method="_on_Facebook_pressed"]
[connection signal="pressed" from="SMS" to="." method="_on_SMS_pressed"]
